ME_4600/MESDK/ME-3000/VC/me3000.h


_declspec(dllexport) int  _cdecl    me3000AIMultipleEx(int, short*, int, int,
                                                       int, int, P_1_PROC);

_declspec(dllexport) int  _cdecl    me3000AIQuickEx(int, short*, int, int,
                                                    int, int, P_1_PROC);

_declspec(dllexport) int  _cdecl    me3000AIScanEx(int, short*, int, int, int,
                                                   int, int, P_1_PROC);

_declspec(dllexport) int  _cdecl    me3000AIContinuous(int, int, int, P_1_PROC);

_declspec(dllexport) int  _cdecl    me3000AOContinuousEx(int, int, int, short*,
                                                         int, int, PVOID_PROC);

//
// External interrupt functions
//------------------------------
_declspec(dllexport) int  _cdecl    me3000EnableExternalInt(int, PVOID_PROC Callback);

_declspec(dllexport) int  _cdecl    me3000CNTInterrupt(int, int, int, PVOID_PROC);